fix: restore the newline spacing after the media content block (#6212)

--- a/docs/source/_static/css/custom.css
+++ b/docs/source/_static/css/custom.css
@@ -327,7 +327,7 @@ span.linenos.last-linenos {
 
 .rst-content section > img,
 .rst-content section > a > img {
-  margin-bottom: 24px;
+  margin-bottom: 24px !important;
 }
 
 .rst-content .align-center {
